--- a/pom.xml
+++ b/pom.xml
@@ -94,4 +94,15 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>OnARandomBox</id>
+            <url>http://repo.onarandombox.com/content/repositories/thirdparty</url>
+        </repository>
+        <snapshotRepository>
+            <id>OnARandomBox-snapshots</id>
+            <url>http://repo.onarandombox.com/content/repositories/thirdparty-dev</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
